--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "clarity-codegen",
-  "version": "1.0.0",
+  "version": "0.0.1",
   "main": "./lib/index.js",
   "types": "./lib/index.d.ts",
   "files": [
@@ -14,16 +14,16 @@
     "build": "rm -rf lib && tsc -p tsconfig.json"
   },
   "devDependencies": {
+    "@stacks/transactions": "^3.3.0",
     "@types/lodash": "^4.14.180",
     "@types/node": "^17.0.23",
     "@types/node-fetch": "2",
     "@types/yargs": "^17.0.10",
-    "prettier": "^2.6.1",
-    "typescript": "^4.6.3",
     "lodash": "^4.17.21",
     "node-fetch": "2",
-    "yargs": "^17.4.0",
-    "@stacks/transactions": "^3.3.0"
+    "prettier": "^2.6.1",
+    "typescript": "^4.6.3",
+    "yargs": "^17.4.0"
   },
   "peerDependencies": {
     "@stacks/transactions": "*"
