--- a/package.json
+++ b/package.json
@@ -25,6 +25,9 @@
     "typescript": "^4.6.3",
     "yargs": "^17.4.0"
   },
+  "dependencies": {
+    "@stacks/stacks-blockchain-api-types": "^3.0.2"
+  },
   "peerDependencies": {
     "@stacks/transactions": "*"
   }
