--- a/package.json
+++ b/package.json
@@ -19,14 +19,14 @@
     "@types/node": "^17.0.23",
     "@types/node-fetch": "2",
     "@types/yargs": "^17.0.10",
-    "lodash": "^4.17.21",
-    "node-fetch": "2",
     "prettier": "^2.6.1",
-    "typescript": "^4.6.3",
-    "yargs": "^17.4.0"
+    "typescript": "^4.6.3"
   },
   "dependencies": {
-    "@stacks/stacks-blockchain-api-types": "^3.0.2"
+    "node-fetch": "2",
+    "lodash": "^4.17.21",
+    "@stacks/stacks-blockchain-api-types": "^3.0.2",
+    "yargs": "^17.4.0"
   },
   "peerDependencies": {
     "@stacks/transactions": "*"
