--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "@stacks/stacks-blockchain-api-types": "^3.0.2",
     "lodash": "^4.17.21",
     "node-fetch": "2",
-    "yargs": "^17.4.0"
+    "yargs": "^17.4.0",
+    "yqueue": "^1.0.0"
   },
   "peerDependencies": {
     "@stacks/transactions": "*"
