--- a/package.json
+++ b/package.json
@@ -15,19 +15,18 @@
     "build": "rm -rf lib && tsc -p tsconfig.json"
   },
   "devDependencies": {
-    "@stacks/transactions": "^3.3.0",
-    "@types/lodash": "^4.14.180",
-    "@types/node": "^17.0.23",
-    "@types/node-fetch": "2",
+    "@stacks/transactions": "^4.0.0",
+    "@types/lodash": "^4.14.182",
+    "@types/node": "^17.0.31",
     "@types/yargs": "^17.0.10",
-    "prettier": "^2.6.1",
-    "typescript": "^4.6.3"
+    "prettier": "^2.6.2",
+    "typescript": "^4.6.4"
   },
   "dependencies": {
-    "@stacks/stacks-blockchain-api-types": "^3.0.2",
+    "@stacks/stacks-blockchain-api-types": "^3.0.3",
+    "axios": "^0.27.2",
     "lodash": "^4.17.21",
-    "node-fetch": "2",
-    "yargs": "^17.4.0",
+    "yargs": "^17.4.1",
     "yqueue": "^1.0.0"
   },
   "peerDependencies": {
