--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "clarity-codegen": "./lib/generate/cli.js"
   },
   "scripts": {
-    "prepare": "yarn build",
+    "prepare": "pnpm run build",
     "build": "rm -rf lib && tsc -p tsconfig.json"
   },
   "devDependencies": {
@@ -24,7 +24,7 @@
   },
   "dependencies": {
     "@stacks/stacks-blockchain-api-types": "^7.1.10",
-    "axios": "^1.4.0",
+    "axios": "1.4.0",
     "lodash": "^4.17.21",
     "yargs": "^17.7.2",
     "yqueue": "^1.0.1"
