--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "clarity-codegen",
-  "version": "0.5.0-beta.3",
+  "version": "0.5.0",
   "main": "./lib/index.js",
   "module": "./dist/index.js",
   "types": "./dist/index.d.ts",
