--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "clarity-codegen",
-  "version": "0.5.3",
+  "version": "1.0.0-beta.1",
   "main": "./lib/index.js",
   "module": "./dist/index.js",
   "types": "./dist/index.d.ts",
@@ -34,7 +34,8 @@
     }
   },
   "devDependencies": {
-    "@stacks/transactions": "^6.5.2",
+    "@stacks/transactions": "^7.0.2",
+    "@stacks/common": "^7.0.2",
     "@types/lodash": "^4.14.194",
     "@types/node": "^20.1.5",
     "@types/yargs": "^17.0.24",
@@ -49,6 +50,7 @@
     "yqueue": "^1.0.1"
   },
   "peerDependencies": {
-    "@stacks/transactions": "*"
+    "@stacks/transactions": "^7.0.2",
+    "@stacks/common": "^7.0.2"
   }
 }
